# chess

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pgn.cpp  pgn.h
games/: bigem1.pgn  bigem2.pgn  bigem3.pgn  promotion.pgn
models/: Tower.mtl  szachy.blend  szachy.blend1
